css/stylesheet.css
body{
    background-image: image("ring.jpeg");
    margin: 0%;
    gap: 0%;
}


h3{
    font-size: 15px;
    color: white;
    font-family: "Lexend Exa", sans-serif;
    text-align: right;
}

h2{
    color: white;
    font-family: "Lexend Exa", sans-serif;
    text-align: center;
}

h4{
    font-family: "Roboto", sans-serif;
}

header object{
    width: 3em;
    padding: 0.1em;
}

div#layout-index{
    display: grid;
    height: 100em;
    
    grid-template-columns: 100;
    grid-template-rows: 5em 3em 30em 1fr;
    grid-template-areas: 
    'hd'
    'nv'
    'dv'
    'wr'
    'wr';
}
div#layout{
    display: grid;    
    
    grid-template-rows: 5em 3em;
    grid-template-areas: 
    'hd'
    'nv'
    'sc'
    'sc';
}

.Lexend{
    font-family: "Lexend Exa", sans-serif;
    font-size: 5vh;
    text-align: center;
}



header{
    background-color: 	white;
    font-size: 400%;
    grid-area: hd;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   
}

nav{
    display: flex;
    grid-area: nv;
    background-color:white;
    justify-content: space-evenly;
    /*border-radius: 30px;*/

    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);*/

    
}
/*
aside{
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    grid-area: as;
    background-color: #3498db;
    border-radius: 30px;
    color: white;
}
*/
section{
    grid-area: sc;
}



section#wrapper{
    display: flex;
    grid-area: wr;
    flex-direction: row;
    background-color: white;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 0%;
    padding: 0%;
    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);*/

}
.margin{
    margin-top: 50vh;
    margin-bottom: 100vh;
}

div#img{
    grid-area: dv;
    object-fit: cover;
    overflow: hidden;
}
div#img img{
    height: auto;
    max-width: 100%;
    
}

article {
    width: 40em;
    object-fit: cover;
    margin-top: 2em;
    
}
article img{
    transition: 0.2s;
    width: 100%;
    border-radius: 1em;
    scale: 100%;
}

button:hover{
    scale: 104%;
}

button{
    background-color: #3498db; /* Green */
    border: none;
    border-radius: 1em;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

section#mainWrapper{
    display: flex;
    background-color: #01101b;
    flex-direction: column;

    flex-wrap: wrap;
    background-image: image("ring.jpg");
}


a:link, a:visited {
  color: #3498db;
  padding: 15px 25px;
  text-align: center;
  text-decoration: none;

}


.ring{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 40%;
    
}

.hidden {

    opacity: 0;
    
    transform: translateY(0);
    filter: blur(5px);
    transition: all 1s;

}

.show {
    filter: blur(0);
    opacity: 1;
    transform: translateY(-100%);
}

